fixup: CI caching experiment (mk 7)

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -41,7 +41,7 @@ runs:
           shell: bash
           if: ${{ steps.check-poetry.outcome == 'failure'}}
           run: |
-              ${{ steps.setup-python.outputs.python-path }} -m venv "${{ inputs.cache }}/tools"
+              python -m venv "${{ inputs.cache }}/tools"
               pip install poetry==${{ inputs.poetry-version }}
 
         - name: "Install development dependencies"
