--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -10,7 +10,7 @@ inputs:
         default: "1.3.2"
     cache:
         description: "Cache directory"
-        default: ".cache"
+        default: "${{ runner.temp }}/cache"
 
 runs:
     using: "composite"
