chore(deps-dev): lock and update all dev deps to latest

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,6 @@ updates:
       directory: "/"
       schedule:
           interval: "monthly"
+      versioning-strategy: "increase"
+      ignore:
+          - dependency-name: "python"
