--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,18 +25,18 @@ classifiers = [
 python = "^3.7"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-coverage = { extras = ["toml"], version = "^7.1.0" }
-mkdocs = "^1.4.2"
-mkdocs-material = "^9.0.13"
-mkdocstrings = { extras = ["python"], version = ">=0.20,<0.23" }
-mypy = "^1.0.1"
-poethepoet = ">=0.18.1,<0.20.0"
-pytest = "^7.0.1"
-pytest-asyncio = ">=0.20.3,<0.22.0"
-pytest-mypy-plugins = "^1.10.1"
-pytest-xdist = "^3.0.2"
-ruff = ">=0.0.247,<0.0.271"
+black = "23.3.0"
+coverage = { extras = ["toml"], version = "7.2.7" }
+mkdocs = "1.4.3"
+mkdocs-material = "9.1.18"
+mkdocstrings = { extras = ["python"], version = "0.22.0" }
+mypy = "1.4.1"
+poethepoet = "0.19.0"
+pytest = "7.4.0"
+pytest-asyncio = "0.21.0"
+pytest-mypy-plugins = "2.0.0"
+pytest-xdist = "3.3.1"
+ruff = "0.0.276"
 
 [tool.poe.tasks]
 all = [ "check", "lint", "format-check", "test-once", "coverage", "docs-build", "build" ]
@@ -59,7 +59,7 @@ build-ci = ["docs-build", "build"]
 "decoy" = "decoy.pytest_plugin"
 
 [tool.pytest.ini_options]
-addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini"
+addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini --mypy-only-local-stub"
 asyncio_mode = "auto"
 
 [tool.mypy]
