--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Decoy
 site_description: 'Opinionated mocking library for Python.'
-site_author: 'Mike Cousins'
-site_url: 'https://mike.cousins.io/decoy/'
+site_author: 'Michael Cousins'
+site_url: 'https://michael.cousins.io/decoy/'
 repo_url: 'https://github.com/mcous/decoy'
 repo_name: 'mcous/decoy'
 edit_uri: ''
