--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -19,9 +19,13 @@ runs:
           id: setup-python
           uses: actions/setup-python@v4
           with:
-              python-version: |
-                  ${{ inputs.python-version }}
-                  3.12
+              python-version: ${{ inputs.python-version }}
+
+        - if: ${{ inputs.python-version == '3.12' }}
+          name: 'Set up Python 3.12 for Poetry'
+          uses: actions/setup-python@v4
+          with:
+              python-version: 3.12
 
         - name: 'Set up dependency cache'
           uses: actions/cache@v3
@@ -51,5 +55,5 @@ runs:
           shell: bash
           run: |
               poetry config cache-dir "${{ inputs.cache }}/poetry"
-              poetry env use ${{ inputs.python-version }}
+              poetry env use "${{ steps.setup-python.outputs.python-path }}"
               poetry install --sync
