--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -21,7 +21,7 @@ runs:
           with:
               python-version: ${{ inputs.python-version }}
 
-        - if: ${{ inputs.python-version == '3.12' }}
+        - if: ${{ inputs.python-version != '3.12' }}
           name: 'Set up Python 3.12 for Poetry'
           uses: actions/setup-python@v4
           with:
