--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -20,9 +20,9 @@ runs:
           uses: actions/setup-python@v4
           with:
               python-version: ${{ inputs.python-version }}
+              update-environment: false
 
-        - if: ${{ inputs.python-version != '3.12' }}
-          name: 'Set up Python 3.12 for Poetry'
+        - name: 'Set up Python 3.12 for Poetry'
           uses: actions/setup-python@v4
           with:
               python-version: 3.12
