--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,15 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-22.04, windows-latest, macos-latest]
-                python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+                os: [ubuntu-latest, windows-latest, macos-latest]
+                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+                include:
+                    - os: ubuntu-22.04
+                      python-version: "3.7"
+                    - os: windows-latest
+                      python-version: "3.7"
+                    - os: ubuntu-22.04
+                      python-version: "3.7"
         steps:
             - name: "Check out repository"
               uses: actions/checkout@v4
