--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,22 @@ on:
 jobs:
     test:
         name: "Test Python ${{ matrix.python-version }} on ${{ matrix.os }}"
-        runs-on: ${{ matrix.os }}-latest
+        runs-on: ${{ matrix.os }}
         strategy:
+            fail-fast: false
             matrix:
-                os: [Ubuntu, Windows, macOS]
-                python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+                os: [ubuntu-latest, windows-latest, macos-latest]
+                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+                include:
+                    - os: ubuntu-22.04
+                      python-version: "3.7"
+                    - os: windows-latest
+                      python-version: "3.7"
+                    - os: macos-13
+                      python-version: "3.7"
+        permissions:
+            id-token: write
+
         steps:
             - name: "Check out repository"
               uses: actions/checkout@v4
@@ -28,7 +39,9 @@ jobs:
               run: poetry run poe test-ci
 
             - name: "Upload coverage report"
-              uses: codecov/codecov-action@v3
+              uses: codecov/codecov-action@v5
+              with:
+                  use_oidc: true
 
     check:
         name: "Lint and type checks"
