--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,7 +7,7 @@ inputs:
         default: "3.12"
     poetry-version:
         description: "Poetry version to install"
-        default: "2.1.1"
+        default: "2.2.1"
     cache:
         description: "Cache directory"
         default: "${{ runner.temp }}/cache"
@@ -57,4 +57,4 @@ runs:
           run: |
               poetry config cache-dir "${{ inputs.cache }}/poetry"
               poetry env use "${{ steps.setup-python.outputs.python-path }}"
-              poetry install --sync
+              poetry sync --all-groups
