--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,9 @@ jobs:
                       python-version: "3.7"
                     - os: windows-latest
                       python-version: "3.7"
-                    - os: macos-13
-                      python-version: "3.7"
+                    # TODO: re-enable macOS + Python 3.7 once off Poetry
+                    # - os: macos-15-intel
+                    #   python-version: "3.7"
         permissions:
             id-token: write
 
