feat: add `decoy.next` preview API

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
           - advanced/properties.md
           - advanced/context-managers.md
     - api.md
+    - api-next.md
     - contributing.md
     - license.md
 
