--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,24 +25,55 @@ classifiers = [
 python = "^3.7"
 
 [tool.poetry.group.dev.dependencies]
-poethepoet = "0.19.0"
+poethepoet = [
+    { version = "0.19.0", python = "<3.8" },
+    { version = "0.30.0", python = ">=3.8, <3.9" },
+    { version = "0.35.0", python = ">=3.9" },
+]
 
 [tool.poetry.group.test.dependencies]
-coverage = { version = "7.2.7", extras = ["toml"] }
+coverage = [
+    { version = "7.2.7", extras = [
+        "toml",
+    ], python = "<3.8" },
+    { version = "7.6.1", extras = [
+        "toml",
+    ], python = ">=3.8, <3.9" },
+    { version = "7.9.1", extras = [
+        "toml",
+    ], python = ">=3.9" },
+]
 mypy = [
     { version = "1.4.1", python = "<3.8" },
-    { version = "1.5.0", python = ">=3.8" },
+    { version = "1.14.1", python = ">=3.8, <3.9" },
+    { version = "1.16.0", python = ">=3.9" },
 ]
-pytest = "7.4.0"
-pytest-asyncio = "0.21.1"
-pytest-mypy-plugins = "2.0.0"
-pytest-xdist = "3.5.0"
-ruff = "0.11.0"
+pytest = [
+    { version = "7.4.4", python = "<3.8" },
+    { version = "8.3.5", python = ">=3.8, <3.9" },
+    { version = "8.4.0", python = ">=3.9" },
+]
+pytest-asyncio = [
+    { version = "0.21.2", python = "<3.8" },
+    { version = "0.24.0", python = ">=3.8, <3.9" },
+    { version = "1.0.0", python = ">=3.9" },
+]
+pytest-mypy-plugins = [
+    { version = "2.0.0", python = "<3.8" },
+    { version = "3.1.2", python = ">=3.8, <3.9" },
+    { version = "3.2.0", python = ">=3.9" },
+]
+pytest-xdist = [
+    { version = "3.5.0", python = "<3.8" },
+    { version = "3.6.1", python = ">=3.8, <3.9" },
+    { version = "3.7.0", python = ">=3.9" },
+]
+ruff = "0.11.13"
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = { version = "1.5.3", python = ">=3.8" }
-mkdocs-material = { version = "9.4.8", python = ">=3.8" }
-mkdocstrings = { version = "0.23.0", extras = ["python"], python = ">=3.8" }
+mkdocs = { version = "1.6.1", python = ">=3.10" }
+mkdocs-material = { version = "9.6.14", python = ">=3.10" }
+mkdocstrings = { version = "0.29.1", extras = ["python"], python = ">=3.10" }
 
 [tool.poe.tasks]
 all = [
