--- a/tests/typing/test_typing.yml
+++ b/tests/typing/test_typing.yml
@@ -74,7 +74,6 @@
       main:10: error: Argument 1 to "then_return" of "Stub" has incompatible type "str"; expected "int"  [arg-type]
 
 - case: context_manager_stub_mimics_enter_type
-  skip: sys.version_info < (3, 7)
   main: |
       import contextlib
       from typing import Generator
@@ -94,7 +93,7 @@
       main:13: error: Argument 1 to "then_enter_with" of "Stub" has incompatible type "str"; expected "int"  [arg-type]
 
 - case: context_manager_stub_rejects_wrong_spec
-  skip: sys.version_info < (3, 7)
+  regex: yes
   main: |
       from decoy import Decoy
 
@@ -109,10 +108,10 @@
       decoy.when(fake_any("hello")).then_enter_with(42)
 
   out: |
-      main:10: error: Invalid self argument "Stub[int]" to attribute function "then_enter_with" with type "Callable[[Stub[AbstractContextManager[ContextValueT]], ContextValueT], None]"  [misc]
-      main:10: error: No overload variant of "then_enter_with" of "Stub" matches argument type "int"  [call-overload]
+      main:10: error: Invalid self argument "Stub\[int]" to attribute function "then_enter_with" with type "Callable\[\[Stub\[.*ContextManager\[ContextValueT]], ContextValueT], None]"  \[misc]
+      main:10: error: No overload variant of "then_enter_with" of "Stub" matches argument type "int"  \[call-overload]
       main:10: note: Possible overload variants:
-      main:10: note:     def then_enter_with(self, value: <nothing>) -> None
+      main:10: note:     def then_enter_with\(self, value.+\) -> None
 
 - case: matchers_mimic_types
   main: |
