--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -5,12 +5,6 @@ inputs:
     python-version:
         description: "Python version to install"
         default: "3.12"
-    poetry-version:
-        description: "Poetry version to install"
-        default: "2.2.1"
-    cache:
-        description: "Cache directory"
-        default: "${{ runner.temp }}/cache"
 
 runs:
     using: "composite"
@@ -22,39 +16,17 @@ runs:
               python-version: ${{ inputs.python-version }}
               update-environment: false
 
-        - name: "Set up Python 3.12 for Poetry"
-          id: setup-poetry-python
-          uses: actions/setup-python@v5
-          with:
-              python-version: 3.12
+        - name: Install uv
+          uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
 
-        - name: "Set up dependency cache"
-          uses: actions/cache@v4
-          with:
-              key: ${{ runner.os }}-${{ steps.setup-poetry-python.outputs.python-version }}-${{ steps.setup-python.outputs.python-version }}-${{ inputs.poetry-version }}-${{ hashFiles('poetry.lock') }}
-              path: ${{ inputs.cache }}
-
-        - name: "Set up PATH on POSIX"
-          if: ${{ runner.os != 'windows'}}
-          shell: bash
-          run: echo "${{ inputs.cache }}/tools/bin" >> $GITHUB_PATH
-
-        - name: "Set up PATH on Windows"
-          if: ${{ runner.os == 'windows'}}
-          shell: bash
-          run: echo "${{ inputs.cache }}/tools/Scripts" >> $GITHUB_PATH
-
-        - name: "Install Poetry"
+        - name: Install poe
           shell: bash
           run: |
-              if ! poetry --version; then
-                "${{ steps.setup-poetry-python.outputs.python-path }}" -m venv "${{ inputs.cache }}/tools"
-                pip install poetry==${{ inputs.poetry-version }}
-              fi
+              uv tool install poethepoet
 
         - name: "Install development dependencies"
           shell: bash
+          env:
+              python_path: ${{ steps.setup-python.outputs.python-path }}
           run: |
-              poetry config cache-dir "${{ inputs.cache }}/poetry"
-              poetry env use "${{ steps.setup-python.outputs.python-path }}"
-              poetry sync --all-groups
+              uv sync --all-groups --python "$python_path"
