--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,8 @@ updates:
           interval: "weekly"
           day: "sunday"
 
-    # Poetry dependencies
-    - package-ecosystem: "pip"
+    # Python dependencies
+    - package-ecosystem: "uv"
       directory: "/"
       schedule:
           interval: "monthly"
