--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,8 @@ all = [
     "format-check",
     "test-once",
     "coverage",
-    "docs-build",
-    "build",
+    "build-docs",
+    "build-package",
 ]
 check = "mypy"
 lint = "ruff check ."
@@ -81,11 +81,10 @@ test-once = "coverage run --branch --source=decoy -m pytest --mypy-same-process"
 coverage = "coverage report"
 coverage-xml = "coverage xml"
 docs = "mkdocs serve"
-docs-build = "mkdocs build"
-build = "poetry build"
+build-docs = "mkdocs build"
+build-package = "poetry build"
 check-ci = ["check", "lint", "format-check"]
 test-ci = ["test-once", "coverage-xml"]
-build-ci = ["docs-build", "build"]
 
 [tool.pytest.ini_options]
 addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini --mypy-only-local-stub"
