ci: add missing token perm to pages deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,9 @@ jobs:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
 
+        permissions:
+            id-token: write
+
         steps:
             - name: Deploy
               id: deployment
