ci: add missing `pages: write` perm to docs deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,7 @@ jobs:
 
         permissions:
             id-token: write
+            pages: write
 
         steps:
             - name: Deploy
