feat(matchers): add strictly-typed ValueCaptor (#270)
Co-authored-by: Michael Cousins <michael@cousins.io>

--- a/tests/typing/test_typing.yml
+++ b/tests/typing/test_typing.yml
@@ -118,8 +118,12 @@
       from decoy import matchers
 
       reveal_type(matchers.Anything())
+      reveal_type(matchers.AnythingOrNone())
       reveal_type(matchers.IsA(str))
       reveal_type(matchers.IsNot(str))
+      reveal_type(matchers.HasAttributes({"foo": "bar"}))
+      reveal_type(matchers.DictMatching({"foo": 1}))
+      reveal_type(matchers.ListMatching([1]))
       reveal_type(matchers.StringMatching("foobar"))
       reveal_type(matchers.ErrorMatching(RuntimeError))
       reveal_type(matchers.Captor())
@@ -127,6 +131,24 @@
       main:3: note: Revealed type is "Any"
       main:4: note: Revealed type is "Any"
       main:5: note: Revealed type is "Any"
-      main:6: note: Revealed type is "builtins.str"
-      main:7: note: Revealed type is "builtins.RuntimeError"
+      main:6: note: Revealed type is "Any"
+      main:7: note: Revealed type is "Any"
       main:8: note: Revealed type is "Any"
+      main:9: note: Revealed type is "Any"
+      main:10: note: Revealed type is "builtins.str"
+      main:11: note: Revealed type is "builtins.RuntimeError"
+      main:12: note: Revealed type is "Any"
+
+- case: captor_mimics_types
+  main: |
+      from decoy import matchers
+
+      captor = matchers.ValueCaptor[str]()
+
+      reveal_type(captor.matcher)
+      reveal_type(captor.value)
+      reveal_type(captor.values)
+  out: |
+      main:5: note: Revealed type is "builtins.str"
+      main:6: note: Revealed type is "builtins.object"
+      main:7: note: Revealed type is "builtins.list[builtins.object]"
