test: remove and replace redundant tests of internals

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ test-ci = ["test-once", "coverage-xml"]
 [tool.pytest.ini_options]
 addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini --mypy-only-local-stub"
 asyncio_mode = "auto"
+filterwarnings = ["error::decoy.warnings.DecoyWarning"]
 
 [tool.mypy]
 files = ["decoy", "tests"]
