--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,6 @@ jobs:
     build-package:
         name: Build package
         runs-on: ubuntu-latest
-        needs: [test, check]
         steps:
             - name: "Check out repository"
               uses: actions/checkout@v6
@@ -83,7 +82,6 @@ jobs:
     build-docs:
         name: Build docs
         runs-on: ubuntu-latest
-        needs: [test, check]
         steps:
             - name: "Check out repository"
               uses: actions/checkout@v6
@@ -102,7 +100,7 @@ jobs:
     deploy-package:
         name: Deploy package to PyPI
         runs-on: ubuntu-latest
-        needs: [build-package]
+        needs: [build-package, check, test]
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         environment:
             name: pypi
@@ -128,7 +126,7 @@ jobs:
     deploy-docs:
         name: Deploy docs to GitHub Pages
         runs-on: ubuntu-latest
-        needs: [build-docs]
+        needs: [build-docs, check, test]
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         environment:
             name: github-pages
